--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <main>
             <h1>Seth Taylor | WDD 130</h1>
                 <img src="images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
-                <p> Hello! My name is Seth Taylor and I am from North Carolina, I am a transfer student studying Computer Science </p>
+                <p> Hello! My name is Seth Taylor and I am from North Carolina, I am a transfer student studying Computer Science. </p>
         </main>
     <footer>
         <p>©️2024 😎 Seth Taylor 😎 North Carolina </p>
