--- a/week one/index.html
+++ b/week one/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Seth Taylor | WDD130 </title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
      <body>
         <header>
@@ -16,7 +16,7 @@
         </header>
          <main>
             <h1>Seth Taylor | WDD 130</h1>
-                <img src="images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
+                <img src="/images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
                 <p> Hello! My name is Seth Taylor and I am from North Carolina, I am a transfer student studying Computer Science. </p>
         </main>
     <footer>
