home page enhancement

--- a/week one/index.html
+++ b/week one/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="My name is Seth Taylor, this is for Web Fundamentals for an our week one assignment named index">
+        <meta name ="author" content="Seth Taylor">
         <title> Seth Taylor | WDD130 </title>
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
@@ -18,6 +20,11 @@
             <h1>Seth Taylor | WDD 130</h1>
                 <img src="/images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
                 <p> Hello! My name is Seth Taylor and I am from North Carolina, I am a transfer student studying Computer Science. </p>
+                <aside>
+                    <h2>North Carolina</h2>
+                    <img src="/images/obx.jpg" alt="obx">
+                    <p>North Carolina is a coastal state that offers many great coastal cities in the Outer Banks.</p>
+                </aside>
         </main>
     <footer>
         <p>©️2024 😎 Seth Taylor 😎 North Carolina </p>
