--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="My name is Seth Taylor, this is for Web Fundamentals for an our week one assignment named index">
         <meta name ="author" content="Seth Taylor">
         <title> Seth Taylor | WDD130 </title>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
      <body>
         <header>
