--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </header>
          <main>
             <h1>Seth Taylor | WDD 130</h1>
-                <img src="/images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
+                <img src="images/profile.jpg" alt="Hello, my name is Seth Taylor" width="200">
                 <p> Hello! My name is Seth Taylor and I am from North Carolina, I am a transfer student studying Computer Science. </p>
                 <aside>
                     <h2>North Carolina</h2>
-                    <img src="/images/obx.jpg" alt="obx">
+                    <img src="images/obx.jpg" alt="obx">
                     <p>North Carolina is a coastal state that offers many great coastal cities in the Outer Banks.</p>
                 </aside>
         </main>
