--- a/week2/wireframe.html
+++ b/week2/wireframe.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <header>
-            <img src="" alt="">
+            <div class="logo-box">
+            <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/55/05/95/550595ef-a753-9207-da2e-a95449f821ae/AppIcon49-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/65x75bb.jpg" alt="logo">
+            </div>
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Link</a>
@@ -16,6 +18,32 @@
             </nav>
         </header>
         <main>
+            <div id="banner-box">
+                <section class="banner">
+                <img src="https://brightspotcdn.byui.edu/dims4/default/da98386/2147483647/strip/true/crop/1205x406+0+0/resize/800x270!/quality/90/?url=https%3A%2F%2Fbyu-idaho-brightspot-production-us-east-2.s3.us-east-2.amazonaws.com%2Ffb%2F53%2Fae7a0b5b403fa6ed53aa53327fcb%2Fbyui-horizontal.png" alt="banner-description">
+                <h2>Banner 1 Title</h2>
+                 <p>Banner 1 Text Paragraph</p>
+                 </section>
+            <section class="banner">
+                    <img src="https://brightspotcdn.byui.edu/dims4/default/da98386/2147483647/strip/true/crop/1205x406+0+0/resize/800x270!/quality/90/?url=https%3A%2F%2Fbyu-idaho-brightspot-production-us-east-2.s3.us-east-2.amazonaws.com%2Ffb%2F53%2Fae7a0b5b403fa6ed53aa53327fcb%2Fbyui-horizontal.png" alt="banner-description">
+                    <h2>Banner 2 Title</h2>
+                    <p>Banner 2 Text Paragraph</p>
+                    </section>
+             <section class="banner">
+                 <img src="https://brightspotcdn.byui.edu/dims4/default/da98386/2147483647/strip/true/crop/1205x406+0+0/resize/800x270!/quality/90/?url=https%3A%2F%2Fbyu-idaho-brightspot-production-us-east-2.s3.us-east-2.amazonaws.com%2Ffb%2F53%2Fae7a0b5b403fa6ed53aa53327fcb%2Fbyui-horizontal.png" alt="banner-description">
+                 <h2>Banner 3 Title</h2>
+                  <p>Banner 3 Text Paragraph</p>
+                  </section>
+
+            </div>
+
+            <div id="product-gallery">
+                <section class="product">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsKl2cjT7VL4RQyrE-_afvJHGYJ1WUDum94g&s">
+                    <h2>Product 1 Title</h2>
+                    <p>Product 1 Description</p>
+                    </section>
+            </div>
         </main>
         <footer>
         </footer>
