--- a/week3/raftingwebsite.html
+++ b/week3/raftingwebsite.html
@@ -10,7 +10,7 @@
         <header>
             <div class="callout">
                 <div>
-                <img class="logo" src="/images/raftinglogo.png" alt="logo">
+                <img class="logo" src="images/raftinglogo.png" alt="logo">
                 </div>
                 <div>
                     <nav class="nav">
