--- a/week3/raftingwebsite.html
+++ b/week3/raftingwebsite.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="callout">
-            <img class="logo" src="/images/raftinglogo.png" alt="Rafting Logo">
+            <img class="logo" src="images/raftinglogo.png" alt="Rafting Logo">
             <nav class="nav">
                 <a href="#">Home</a>
                 <a href="#">About Us</a>
@@ -21,7 +21,7 @@
     
     <main>
         <div>
-            <img class="rafting" src="/images/rafting.jpg" alt="Rafting Adventure">
+            <img class="rafting" src="images/rafting.jpg" alt="Rafting Adventure">
             <section class="stats">
                 <h3>White Water Rafting</h3>
             </section>
@@ -35,7 +35,7 @@
     </main>
     
     <footer>
-        <img class="footerlogo" src="/images/raftinglogo.png" alt="Footer Logo">
+        <img class="footerlogo" src="images/raftinglogo.png" alt="Footer Logo">
         <section class="footer">
             <p>Contact Us! 455-773-2056 | whitewaterrafting@gmail.com</p> 
         </section>
