--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Website</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="stylewwr/wwr.css">
 </head>
 <body>
