--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,10 +11,10 @@
         <div class="callout">
             <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             <nav class="nav">
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Trips</a>
-                <a href="#">Contact Us</a>
+                <a href="#">|Home|</a>
+                <a href="#">|About Us|</a>
+                <a href="#">|Trips|</a>
+                <a href="#">|Contact Us|</a>
             </nav>
         </div>
     </header>
