--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,6 +21,10 @@
     
     <main>
         <div>
+            <section class="callout2">
+            <p>History</p>
+            <section></section>
+        <div>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
             <section class="stats">
                 <h3>White Water Rafting</h3>
