--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,13 +22,10 @@
     <main>
         <div>
             <section class="callout2">
-            <p>History</p>
-            <section></section>
+            <p class="wwr">White Water Rafting</p>
+            </section>
         <div>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
-            <section class="stats">
-                <h3>White Water Rafting</h3>
-            </section>
         </div>
         
         <div>
