--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,8 +22,12 @@
     <main>
         <div>
             <section class="callout2">
-            <p class="wwr">White Water Rafting</p>
+            <h1 class="wwr">White Water Rafting</h1>
+            <p> </p>
+            <p> </p>
+            <p> </p>
             </section>
+            
         <div>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
         </div>
