--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,19 +28,18 @@
             </section>
         </div>
         <div>
-            <section class="callout2">
+            <section class="callout3">
                 <h1 class="wwr">History</h1>
-                <p class="textmargin"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </div>
       <div>
-        <section class="callout2">
+        <section class="callout4">
             <h1 class="wwr">Adventure Awaits You</h1>
-            <p class="textmargin"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
       </div>
         
     </main>
     <footer>
-
         <section class="footer">
             <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">Contact Us! 455-773-2056 | whitewaterrafting@gmail.com</p> 
         </section>
