--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
         </div>
         <div>
             <section class="callout3">
-                <h1 class="wwr">History</h1>
+                <h1 class="wwr2">History</h1>
                 <p class="textmargin2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </div>
       <div>
