--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
     <main>
         <div>
             <section class="callout2">
-            <h1 class="wwr">White Water Rafting</h1>
+            <h1 class="wwr" class="Lora">White Water Rafting</h1>
             <p class="textmargin"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
             </section>
