--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,7 +18,7 @@
         <div class="callout">
             <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             <nav class="nav">
-                <a href="#">|Home|</a>
+                <a href="#">|Index|</a>
                 <a href="#">|About Us|</a>
                 <a href="#">|Trips|</a>
                 <a href="#">|Contact Us|</a>
@@ -28,9 +28,11 @@
     
     <main>
         <div>
-            <section class="callout2">
+            <section class="hero">
             <h1 class="wwr" class="Lora">White Water Rafting</h1>
             <p class="textmargin"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+            
+            </div>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
             </section>
         </div>
