--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,7 +30,7 @@
         <div>
             <section class="hero">
             <h1 class="wwr" class="Lora">White Water Rafting</h1>
-            <p class="textmargin"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+            <p class="textmargin">Mission Statement:  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
             
             </div>
             <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
@@ -38,12 +38,12 @@
         </div>
         <div>
             <section class="callout3">
-                <h1 class="wwr2">History</h1>
+                <h2 class="wwr2">History</h2>
                 <p class="textmargin2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </div>
       <div>
         <section class="callout4">
-            <h1 class="wwr">Adventure Awaits You</h1>
+            <h2 class="wwr">Adventure Awaits You</h2>
             <p class="textmargin2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
       </div>
         
