--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,8 +31,9 @@
             <section class="hero">
             <h1 class="wwr" class="Lora">White Water Rafting</h1>
             <p class="textmargin">Mission Statement:  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+
             </div>
-            <img class="rafting" src="wwrimages/rafting.jpg" alt="Rafting Adventure">
+            <img class="rafting" src="wwrimages/happyfamily.jpg" alt="family">
             </section>
         </div>
         <div>
