--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
                 <h1 class="wwr" class="Lora">White Water Rafting</h1>
             <a>
              <p class="textmargin">Mission Statement:  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
-              <img class="rafting" src="wwrimages/happyfamily.jpg" alt="family">
+              <img class="family" src="wwrimages/happyfamily.jpg" alt="family">
             </a>
             </section>
         </div>
