--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,7 +43,7 @@
         </div>
       <div>
         <section class="callout4">
-            <h2 class="wwr">Adventure Awaits You</h2>
+            <h2 class="wwr2">Adventure Awaits You</h2>
             <p class="textmargin2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
       </div>
         
@@ -52,7 +52,7 @@
         <section class="footer">
             <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">Contact Us! 455-773-2056 | whitewaterrafting@gmail.com</p> 
         </section>
-        <section class="social">
+        <section class="social" class="footer">
             <a href="#">Facebook Link</a>
         </section>
     </footer>
