--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,8 +52,8 @@
         <section class="footer">
             <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">Contact Us! 455-773-2056 | whitewaterrafting@gmail.com</p> 
         </section>
-        <section class="social" class="footer">
-            <a href="#">Facebook Link</a>
+        <section class="social">
+            <a class="footer" href="#">Facebook Link</a>
         </section>
     </footer>
 </body>
