--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,10 +50,18 @@
     </main>
     <footer>
         <section class="footer">
-            <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">Contact Us! 455-773-2056 | whitewaterrafting@gmail.com</p> 
+            <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">©2024 White Water Rafting | Seth Taylor</p> 
         </section>
         <section class="social">
-            <a class="footer" href="#">Facebook Link</a>
+            <a class="footer" href="https:facebook.com">
+                <img src="wwrimages/FB.png" alt ="facebook">
+            </a>
+            <a class="footer" href="https:x.com">
+                <img src="wwrimages/x.png" alt ="x">
+            </a>
+            <a class="footer" href="https:instagram.com">
+                <img src="wwrimages/insta.png" alt ="instagram">
+            </a>
         </section>
     </footer>
 </body>
