--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,9 +50,9 @@
     </main>
     <footer>
         <section class="footer">
-            <p><img class="footerlogo" src="wwrimages/raftinglogo.png" alt="Footer Logo">©2024 White Water Rafting | Seth Taylor</p> 
+        <p>>©2024 White Water Rafting | Seth Taylor
         </section>
-        <section class="social">
+        <section class="size">
             <a class="footer" href="https:facebook.com">
                 <img src="wwrimages/FB.png" alt ="facebook">
             </a>
@@ -62,6 +62,7 @@
             <a class="footer" href="https:instagram.com">
                 <img src="wwrimages/insta.png" alt ="instagram">
             </a>
+        </p>
         </section>
     </footer>
 </body>
