--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,15 +52,15 @@
         <section class="footer">
         <p>>©2024 White Water Rafting | Seth Taylor
         </section>
-        <section class="size">
-            <a class="footer" href="https:facebook.com">
-                <img src="wwrimages/FB.png" alt ="facebook">
+        <section class="footer">
+            <a class="size" href="https:facebook.com">
+                <img class="size" src="wwrimages/FB.png" alt ="facebook">
             </a>
             <a class="footer" href="https:x.com">
-                <img src="wwrimages/x.png" alt ="x">
+                <img class="size" src="wwrimages/x.png" alt ="x">
             </a>
             <a class="footer" href="https:instagram.com">
-                <img src="wwrimages/insta.png" alt ="instagram">
+                <img class="size" src="wwrimages/insta.png" alt ="instagram">
             </a>
         </p>
         </section>
