--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="stylewwr/wwr.css">
+    <link rel="stylesheet" href="stylewwr/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -39,6 +39,12 @@
         <div>
             <section class="callout3">
                 <h2 class="wwr2">History</h2>
+                <img class="rafting" src="wwrimages/rafting1.jpg" alt="rafting1">
+                <img class="rafting" src="wwrimages/rafting2.jpg" alt="rafting2">
+                <img class="rafting" src="wwrimages/rafting3.jpg" alt="rafting3">
+                <img class="rafting" src="wwrimages/rafting4.jpg" alt="rafting4">
+                <img class="rafting" src="wwrimages/rafting5.jpg" alt="rafting5">
+                
                 <p class="textmargin2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </div>
       <div>
