--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="stylewwr/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
 <body>
@@ -29,7 +26,7 @@
     <main>
         <div>
                 <section class="hero">
-                <h1 class="wwr" class="Lora">White Water Rafting</h1>
+                <h1 class="wwr">White Water Rafting</h1>
             <a>
              <p class="textmargin">Mission Statement:  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
               <img class="family" src="wwrimages/happyfamily.jpg" alt="family">
