--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,16 +53,16 @@
     </main>
     <footer>
         <section class="footer">
-        <p>>©2024 White Water Rafting | Seth Taylor
+        <p>©2024 White Water Rafting | Seth Taylor
         </section>
-        <section class="footer">
+        <section class="footerlogo">
             <a class="size" href="https:facebook.com">
                 <img class="size" src="wwrimages/FB.png" alt ="facebook">
             </a>
-            <a class="footer" href="https:x.com">
+            <a class="footerlogo" href="https:x.com">
                 <img class="size" src="wwrimages/x.png" alt ="x">
             </a>
-            <a class="footer" href="https:instagram.com">
+            <a class="footerlogo" href="https:instagram.com">
                 <img class="size" src="wwrimages/insta.png" alt ="instagram">
             </a>
         </p>
