--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,9 +46,12 @@
     </main>
 
     <footer>
+        <div>
         <section class="footer">
             <p>©2024 White Water Rafting | Seth Taylor</p>
         </section>
+        </div>
+        <div>
         <section class="footerlogo">
             <a class="size" href="https://facebook.com">
                 <img class="size" src="wwrimages/FB.png" alt="Facebook">
@@ -60,6 +63,7 @@
                 <img class="size" src="wwrimages/insta.png" alt="Instagram">
             </a>
         </section>
+        </div>
     </footer>
 </body>
 </html>
