--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,22 +47,24 @@
 
     <footer>
         <div>
-        <section class="footer">
-            <p>©2024 White Water Rafting | Seth Taylor</p>
-        </section>
+            <section class="footer">
+                <h2>Stay Connected</h2>
+                <p>©2024 White Water Rafting | Seth Taylor</p>
+            </section>
         </div>
         <div>
-        <section class="footerlogo">
-            <a class="size" href="https://facebook.com">
-                <img class="size" src="wwrimages/FB.png" alt="Facebook">
-            </a>
-            <a class="size" href="https://x.com">
-                <img class="size" src="wwrimages/x.png" alt="X">
-            </a>
-            <a class="size" href="https://instagram.com">
-                <img class="size" src="wwrimages/insta.png" alt="Instagram">
-            </a>
-        </section>
+            <section class="footerlogo">
+                <h2>Follow Us</h2>
+                <a class="size" href="https://facebook.com">
+                    <img class="size" src="wwrimages/FB.png" alt="Facebook">
+                </a>
+                <a class="size" href="https://x.com">
+                    <img class="size" src="wwrimages/x.png" alt="X">
+                </a>
+                <a class="size" href="https://instagram.com">
+                    <img class="size" src="wwrimages/insta.png" alt="Instagram">
+                </a>
+            </section>
         </div>
     </footer>
 </body>
