--- a/wwr/about2.html
+++ b/wwr/about2.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <div class="grid-item">
-            <img class="logo" src="wwr/wwrimages/raftinglogo.png" alt="Rafting Logo">
+            <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
         </div>
         
         <div class="grid-item"><a href="#">Index</a></div> 
