--- a/wwr/about2.html
+++ b/wwr/about2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="/wwr/stylewwr/oneflex.css">
+    <link rel="stylesheet" href="stylewwr/oneflex.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         </div>
         
         <div class="grid-item"><a href="#">Index</a></div> 
-        <div class="grid-item"><a href="#">About Us</a></div>
+        <div class="grid-item"><a href="#">About Us</a></div> 
         <div class="grid-item"><a href="#">Trips</a></div>
         <div class="grid-item"><a href="#">Contact Us</a></div>
     </div>
