--- a/wwr/about2.html
+++ b/wwr/about2.html
@@ -21,9 +21,39 @@
 
     <div class="container2">
         <div class="two">
-            <p>Item 1</p>
+            <h1>White Water Rafting</h1>
         </div>
     </div>
+        <div class="wwrtext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
+        </div>
+        <p></pp>
+        <div class="container3">
+                <h1>History</h1>
+        </div>
+            <div class="historytext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
+            </div>
+            <p>
+            <div class="container4">
+                <h1>Adventure Awaits You</h1>
+            </div>
+            <div class="container4">
+                <p> <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                    <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                    <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+                    <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+                    <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5"></p>
+        </div>
     <hr>
+    <footer>
+        <h2 class="footerfont">©2024 White Water Rafting | Seth Taylor</h2>
+        <p> <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
+        </p>
+
+         
+    </footer>
+    
 </body>
 </html>
