--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting:About Us</title>
-    <link rel="stylesheet" href="stylewwr/rafting.css">
+    <meta name="description" content="About us page for the White Water Rafting Company">
+    <meta name="author" content="Seth Taylor">
+    <title>White Water Rafting: About Us</title>
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
@@ -31,11 +33,21 @@
 
         <section class="callout3">
             <h2 class="wwr2">History</h2>
-            <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
-            <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
-            <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
-            <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
-            <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+            <figure>
+                <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+            </figure>
+            <figure>
+                <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+            </figure>
+            <figure>
+                <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+            </figure>
+            <figure>
+                <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+            </figure>
+            <figure>
+                <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+            </figure>
             <p class="textmargin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </section>
 
