--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,14 +25,21 @@
     </header>
     
     <main>
-        <section class="hero">
-            <h1 class="wwr">White Water Rafting</h1>
-            <p class="textmargin">Mission Statement: Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
-            <img class="family" src="wwrimages/happyfamily.jpg" alt="Family">
+        <section>
+            <div class="hero">
+                <h1>White Water Rafting</h1>
+                <a>Mission Statement: Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa. <img class="family" src="wwrimages/happyfamily.jpg" alt="Family"></a>
+            </div>
         </section>
 
         <section class="callout3">
             <h2 class="wwr2">History</h2>
+            <p class="textmargin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
+        </section>
+
+        <section class="callout4">
+            <h2 class="wwr3">Adventure Awaits You</h2>
+            <p class="textmargin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
             <figure>
                 <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
             </figure>
@@ -48,12 +55,7 @@
             <figure>
                 <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
             </figure>
-            <p class="textmargin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
-        </section>
 
-        <section class="callout4">
-            <h2 class="wwr3">Adventure Awaits You</h2>
-            <p class="textmargin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, accusamus quaerat officiis, rem consequuntur tempore pariatur error harum dolorum voluptatem commodi. Nulla aliquid dicta quibusdam odit accusantium dignissimos nam ipsa.</p>
         </section>
     </main>
 
