--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,10 @@
         <div class="callout">
             <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             <nav class="nav">
-                <a href="#">|Index|</a>
-                <a href="#">|About Us|</a>
-                <a href="#">|Trips|</a>
-                <a href="#">|Contact Us|</a>
+                <a href="#">Index</a>
+                <a href="#">About</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact</a>
             </nav>
         </div>
     </header>
