--- a/wwr/about2.html
+++ b/wwr/about2.html
@@ -14,56 +14,69 @@
 
 <body>
     <header>
-        <div class="grid-container">
+        <div class="nav">
             <div class="grid-item">
                 <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             </div>
-            <nav class="grid-item"><a href="#">Index</a></nav> 
-            <nav class="grid-item"><a href="#">About Us</a></nav> 
-            <nav class="grid-item"><a href="#">Trips</a></nav>
-            <nav class="grid-item"><a href="#">Contact Us</a></nav>
+                <nav class="nav">
+                    <div class="grid-item"><a href="#">Index</a></div> 
+                    <div class="grid-item"><a href="#">About Us</a></div> 
+                    <div class="grid-item"><a href="#">Trips</a></div>
+                    <div class="grid-item"><a href="#">Contact Us</a></div>
+                </nav>
         </div>
     </header>
-    <div class="container2">
-        <div class="two">
-            <h1>White Water Rafting</h1>
-        </div>
-    </div>
-        <div class="wwrtext">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
-        </div>
-        <p></pp>
-        <div class="container3">
-                <h1>History</h1>
-        </div>
-            <div class="historytext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
+    <main>
+        <section>
+            <div class="container2">
+                <div class="two">
+                    <h1>White Water Rafting</h1>
+                </div>
             </div>
-            <p>
-            <div class="container4">
-                <h1>Adventure Awaits You</h1>
-            </div>
-            <div class="container4">
-                <p> 
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
-                    </figure>
-                </p>
-        </div>
-    <hr>
+                <div class="wwrtext">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
+                </div>
+                <p></p>
+        </section>
+        <section>
+                <div class="container3">
+                        <h2>History</h2>
+                </div>
+                    <div class="historytext">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
+                    </div>
+                    <p>
+        <section>
+                    <div class="container4">
+                        <h1>Adventure Awaits You</h1>
+                    </div>
+                    <div class="container4">
+                        <p> 
+                            <figure>
+                               <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                               <figcaption class="fig">rafting 1</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                                <figcaption class="fig">rafting 2</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+                                <figcaption class="fig">rafting 3</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+                                <figcaption class="fig">rafting 4</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+                                <figcaption class="fig">rafting 5</figcaption>
+                            </figure>
+                        </p>
+                </div>
+        </section>
+    </main>
     <footer>
         <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
             <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
@@ -71,6 +84,5 @@
             <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
         </h2>
     </footer>
-    
 </body>
 </html>
