--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,77 +11,73 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <div class="nav">
             <div class="grid-item">
                 <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             </div>
-                <nav class="nav">
-                    <div class="grid-item"><a href="#">Index</a></div> 
-                    <div class="grid-item"><a href="#">About Us</a></div> 
-                    <div class="grid-item"><a href="#">Trips</a></div>
-                    <div class="grid-item"><a href="#">Contact Us</a></div>
-                </nav>
+            <nav class="nav">
+                <div class="grid-item"><a href="#">Index</a></div> 
+                <div class="grid-item"><a href="#">About Us</a></div> 
+                <div class="grid-item"><a href="#">Trips</a></div>
+                <div class="grid-item"><a href="#">Contact Us</a></div>
+            </nav>
         </div>
     </header>
     <main>
         <section>
             <div class="container2">
-                <div class="two">
-                    <h1>White Water Rafting</h1>
-                </div>
+                <h1>White Water Rafting</h1>
             </div>
-                <div class="wwrtext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
-                </div>
-                <p></p>
+            <div class="wwrtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                <p><img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family"></p>
+            </div>
         </section>
         <section>
-                <div class="container3">
-                        <h2>History</h2>
-                </div>
-                    <div class="historytext">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
-                    </div>
-                    <p>
+            <div class="container3">
+                <h2>History</h2>
+            </div>
+            <div class="historytext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                <p><img class="hero" src="wwrimages/hero.jpg" alt="Hero Image"></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
+            </div>
+        </section>
         <section>
-                    <div class="container4">
-                        <h1>Adventure Awaits You</h1>
-                    </div>
-                    <div class="container4">
-                        <p> 
-                            <figure>
-                               <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
-                               <figcaption class="fig">rafting 1</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
-                                <figcaption class="fig">rafting 2</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
-                                <figcaption class="fig">rafting 3</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
-                                <figcaption class="fig">rafting 4</figcaption>
-                            </figure>
-                            <figure>
-                                <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
-                                <figcaption class="fig">rafting 5</figcaption>
-                            </figure>
-                        </p>
-                </div>
+            <div class="container4">
+                <h1>Adventure Awaits You</h1>
+            </div>
+            <div class="rafting-gallery">
+                <figure>
+                    <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                    <figcaption>Rafting 1</figcaption>
+                </figure>
+                <figure>
+                    <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                    <figcaption>Rafting 2</figcaption>
+                </figure>
+                <figure>
+                    <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+                    <figcaption>Rafting 3</figcaption>
+                </figure>
+                <figure>
+                    <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+                    <figcaption>Rafting 4</figcaption>
+                </figure>
+                <figure>
+                    <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+                    <figcaption>Rafting 5</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
         <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
             <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
-            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
-            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
+            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="X"></a>
+            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Instagram"></a>
         </h2>
     </footer>
 </body>
