--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
             </div>
             <div class="wwrtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                <p><img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family"></p>
+                <a><img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family"></a>
             </div>
         </section>
         <section>
@@ -41,7 +41,7 @@
             </div>
             <div class="historytext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                <p><img class="hero" src="wwrimages/hero.jpg" alt="Hero Image"></p>
+                <a><img class="hero" src="wwrimages/hero.jpg" alt="Hero Image"></a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
             </div>
         </section>
@@ -49,7 +49,7 @@
             <div class="container4">
                 <h1>Adventure Awaits You</h1>
             </div>
-            <div class="rafting-gallery">
+            <div class="container4">
                 <figure>
                     <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
                     <figcaption>Rafting 1</figcaption>
