--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,9 +40,9 @@
                 <h2>History</h2>
             </div>
             <div class="historytext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</a>
                 <a><img class="hero" src="wwrimages/hero.jpg" alt="Hero Image"></a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
+                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</a>
             </div>
         </section>
         <section>
@@ -51,11 +51,11 @@
             </div>
             <div class="container4">
                 <figure>
-                    <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                    <a><img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1"></a>
                     <figcaption>Rafting 1</figcaption>
                 </figure>
                 <figure>
-                    <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                    <a><img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2"></a>
                     <figcaption>Rafting 2</figcaption>
                 </figure>
                 <figure>
