--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,9 +19,9 @@
             </div>
             <nav class="nav">
                 <div class="grid-item"><a href="#">Index</a></div> 
-                <div class="grid-item"><a href="#">About Us</a></div> 
+                <div class="grid-item"><a href="#">About</a></div> 
                 <div class="grid-item"><a href="#">Trips</a></div>
-                <div class="grid-item"><a href="#">Contact Us</a></div>
+                <div class="grid-item"><a href="#">Contact</a></div>
             </nav>
         </div>
     </header>
