--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,53 +9,53 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100;400;700;1000&family=Lora:ital,wght@0;400;700;1;400;700&family=Roboto+Slab:wght@100;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="nav">
-            <div class="grid-item">
+        <div class="nav-container">
+            <div class="logo-container">
                 <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             </div>
             <nav class="nav">
-                <div class="grid-item"><a href="#">Index</a></div> 
-                <div class="grid-item"><a href="#">About</a></div> 
-                <div class="grid-item"><a href="#">Trips</a></div>
-                <div class="grid-item"><a href="#">Contact</a></div>
+                <div class="nav-item"><a href="index.html">Index</a></div> 
+                <div class="nav-item"><a href="about.html">About</a></div> 
+                <div class="nav-item"><a href="trips.html">Trips</a></div>
+                <div class="nav-item"><a href="contact.html">Contact</a></div>
             </nav>
         </div>
     </header>
     <main>
         <section>
-            <div class="container2">
+            <div class="container">
                 <h1>White Water Rafting</h1>
             </div>
             <div class="wwrtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                <a><img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family"></a>
+                <img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family">
             </div>
         </section>
         <section>
-            <div class="container3">
+            <div class="container">
                 <h2>History</h2>
             </div>
             <div class="historytext">
-                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</a>
-                <a><img class="hero" src="wwrimages/hero.jpg" alt="Hero Image"></a>
-                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                <img class="hero" src="wwrimages/hero.jpg" alt="Hero Image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
             </div>
         </section>
         <section>
-            <div class="container4">
+            <div class="container">
                 <h1>Adventure Awaits You</h1>
             </div>
-            <div class="container4">
+            <div class="gallery">
                 <figure>
-                    <a><img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1"></a>
+                    <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
                     <figcaption>Rafting 1</figcaption>
                 </figure>
                 <figure>
-                    <a><img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2"></a>
+                    <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
                     <figcaption>Rafting 2</figcaption>
                 </figure>
                 <figure>
@@ -73,7 +73,6 @@
             </div>
         </section>
     </main>
-</body>
     <footer>
         <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
             <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
@@ -81,4 +80,5 @@
             <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Instagram"></a>
         </h2>
     </footer>
+</body>
 </html>
