--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100;400;700;1000&family=Lora:ital,wght@0;400;700;1;400;700&family=Roboto+Slab:wght@100;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100;200;300;400;500;600;700;800;900&family=Lora:ital,wght@0,400;1,400&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,8 +18,8 @@
                 <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             </div>
             <nav class="nav">
-                <div class="nav-item"><a href="index.html">Index</a></div> 
-                <div class="nav-item"><a href="about.html">About</a></div> 
+                <div class="nav-item"><a href="index.html">Index</a></div>
+                <div class="nav-item"><a href="about.html">About</a></div>
                 <div class="nav-item"><a href="trips.html">Trips</a></div>
                 <div class="nav-item"><a href="contact.html">Contact</a></div>
             </nav>
@@ -29,56 +29,57 @@
         <section>
             <div class="container">
                 <h1>White Water Rafting</h1>
-            </div>
-            <div class="wwrtext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                <img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family">
+                <div class="wwrtext">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                    <img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family">
+                </div>
             </div>
         </section>
         <section>
             <div class="container">
                 <h2>History</h2>
-            </div>
-            <div class="historytext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                <img class="hero" src="wwrimages/hero.jpg" alt="Hero Image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
+                <div class="historytext">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
+                    <img class="hero" src="wwrimages/hero.jpg" alt="Hero Image">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
+                </div>
             </div>
         </section>
         <section>
             <div class="container">
-                <h1>Adventure Awaits You</h1>
-            </div>
-            <div class="gallery">
-                <figure>
-                    <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
-                    <figcaption>Rafting 1</figcaption>
-                </figure>
-                <figure>
-                    <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
-                    <figcaption>Rafting 2</figcaption>
-                </figure>
-                <figure>
-                    <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
-                    <figcaption>Rafting 3</figcaption>
-                </figure>
-                <figure>
-                    <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
-                    <figcaption>Rafting 4</figcaption>
-                </figure>
-                <figure>
-                    <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
-                    <figcaption>Rafting 5</figcaption>
-                </figure>
+                <h2>Adventure Awaits You</h2>
+                <div class="gallery">
+                    <figure>
+                        <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                        <figcaption>Rafting 1</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                        <figcaption>Rafting 2</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+                        <figcaption>Rafting 3</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+                        <figcaption>Rafting 4</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+                        <figcaption>Rafting 5</figcaption>
+                    </figure>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
-            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
-            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="X"></a>
-            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Instagram"></a>
-        </h2>
+        <p>©2024 White Water Rafting | Seth Taylor</p>
+        <div>
+            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Follow us on Facebook"></a>
+            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Follow us on X"></a>
+            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Follow us on Instagram"></a>
+        </div>
     </footer>
 </body>
 </html>
